--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,8 +18,14 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: Test
-        run: python test.py
       - name: Analyse code
         run: |
           pylint $(git ls-files '*.py')
+      - name: Test
+        run: python test.py
+      - name: Run tests with coverage
+        run: |
+          pip install coverage
+          coverage run -m unittest discover
+          coverage report
+          coverage html
